--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,9 +1,22 @@
 pipeline {
-  agent {
-    docker { image 'node:16-alpine' }
-  }
+  agent none
   stages {
-    stage('Test') {
+    stage('Back-end') {
+      agent {
+        docker { image 'maven:3.8.1-adoptopenjdk-11' }
+      }
+      steps {
+        // Run Maven targets
+        dir('hello-world') {
+          sh 'mvn clean compile'
+          sh 'mvn exec:java -Dexec.mainClass="com.example.HelloWorld"'
+        }
+      }
+    }
+    stage('Front-end') {
+      agent {
+        docker { image 'node:16-alpine' }
+      }
       steps {
         sh 'node --version'
       }
